--- a/src/screens/Quiz/Result.module.scss
+++ b/src/screens/Quiz/Result.module.scss
@@ -14,6 +14,16 @@
   }
 }
 
+.container{
+  @apply flex justify-center items-center m-auto;
+ 
+  height: calc(100% - 6rem - 10rem);
+
+  @include main.breakpoint-down(large) {
+    height: calc(100% - 5rem - 13rem)
+  }
+}
+
 .wrapper {
   position: relative;
   padding-top: main.em(64);
