--- a/src/styles/_layouts.scss
+++ b/src/styles/_layouts.scss
@@ -6,6 +6,10 @@
   min-height: 100dvh;
 }
 
+.ca-h-screen{
+  height: 100vh;
+}
+
 .ca-header-container {
   width: functions.em(1312);
 
