--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -68,7 +68,7 @@ body {
   &-body {
     &--md {
       color: variables.$black;
-      font-size: functions.em(22px);
+      font-size: functions.em(20px);
       font-weight: 400;
       line-height: 150%;
       letter-spacing: -0.01em;
